# CMake

Help/release/dev/: findcudatoolkit-sanitizer-api.rst
Modules/: FindCUDAToolkit.cmake
Source/: cmLocalGenerator.cxx
Tests/Cuda/: CMakeLists.txt
Tests/Cuda/Sanitizer/: CMakeLists.txt  test_sanitizer.cpp
Tests/CudaOnly/: CMakeLists.txt
Tests/CudaOnly/Sanitizer/: CMakeLists.txt  test_sanitizer.cu
